feat: add Swagger for update and delete user, and validate email in update function
